--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.vs/
+Debug/
+
 # Compiled Object files
 *.slo
 *.lo
@@ -27,3 +30,8 @@
 *.exe
 *.out
 *.app
+
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.VC.db
